# tintagel-head

./: .gitignore  CMakeLists.txt  Experimental DOP System - for Raylib and cURL - Night-12.sublime-workspace  Experimental DOP System - with PortAudio and libsndfile - Tintagel Head.sublime-workspace  Experimental DOP System - with Raylib and Soloud - Tintagel Head.code-workspace  Makefile  Production bolstered by a talented crew of zanies - another commedia dell'arte stock character - Night-12.sublime-workspace  README.md  build.sh  conanfile.txt  meson.build  ols.json
.infra/scripts/: vcpkg_inst_deps.sh
api/: components_wrangler_private.h  components_wrangling.cpp  pasnd_components_wrangler_private.h
app/: main.odin
app/api/: pasnd_components_wrangler_private.h  pasnd_devisor_components_wrangling.cpp
app/controllers/: model_view_controller.odin
app/handlers/: input_command_handling.odin  paex_stereo_channel_handling.cpp  paex_stereo_channels_private.h
app/models/: entity_component_models.odin
clib/: Cargo.toml
clib/src/: lib.rs  main.rs
clibby/: .gitignore  Cargo.toml  rustfmt.toml
clibby/src/: lib.rs
core/: CMakeLists.txt  amd64_comptime_spu_handler.cpp  amd64_orcv2_jit_interpreter.cpp  amd_x86_64_cell_interpreter.cpp  amd_x86_64_cell_recompiler.cpp  core_audio_service_public.c  core_devisor_attache_private.c  pasnd_audio_components_private.h  pasnd_audio_devisor_public.c
inc/: amd64_command_buffer_handler.h  amd64_command_ring_buffer.h  amd64_hypervisor_guest_policy.h  amd64_mailbox_protocol_handler.h  amd_x86_64_cell_interpreter.hpp  amd_x86_64_cell_recompiler.hpp  cellbe_harvard_style_cache.h  cellbe_memorymap.h  cellbe_spu_command_handler.h  cellbe_vector_simd_pem.h  components.h  components.hpp  components_wrangler_private.h  components_wrangling.cpp  components_wrangling_private.c  core_audio_components_private.h  core_devisor_attache_private.h  coverage_testassert_debug_mod.h  coverage_testassert_debug_mod.hpp  function_offload_arena_data.h  function_offload_model_hook.h  function_offload_phantom_marker.h  handling.cpp  handling.h  handling.hpp  libgxxjit_buildmodule.h  libgxxjit_interpreter.h  ndebug_testassert_messages.h  ndebug_variadic_args.hpp  pagui_model_view_ctld.hpp  pasnd_audio_components_private.h  pasnd_audio_service.hpp  pasnd_components_wrangler_private.h  pasnd_device_attache_config.hpp  ragui_distributed_hashtable.hpp  ragui_model_view_ctld.hpp
lib/: amd64_command_buffer_handler.h  amd64_command_ring_buffer.h  amd64_comptime_cell_arenas.hpp  amd64_comptime_cell_interpreter.hpp  amd64_comptime_cell_recompiler.hpp  amd64_comptime_interpreter.h  amd64_comptime_spu_handler.cpp  amd64_comptime_spu_handler.hpp  amd64_mailbox_protocol_handler.hpp  amd64_orcv2_jit_interpreter.cpp  amd64_orcv2_jit_interpreter.hpp  amd64_orcv2jit_buildmodule.cpp  amd64_orcv2jit_function_offload.cpp  amd64_orcv2jit_function_offload.hpp  amd64_orcv2jit_interpreter.cpp  amd64_orcv2jit_interpreter.hpp  amd_command_buffer_handler.h  amd_command_ring_buffer.h  amd_hypervisor_guest_policy.h  amd_x86_64_cell_arenas.hpp  amd_x86_64_cell_interpreter.hpp  amd_x86_64_cell_recompiler.hpp  cellbe_function_offload.cpp  cellbe_function_offload_hook.hpp  cellbe_function_offload_model.hpp  cellbe_memorymap.hpp  cellbe_treewalk_linter.hpp  cellbe_vector_simd_pem.hpp  function_offload_phantom_marker.hpp  libgxxjit_buildmodule.cpp  libgxxjit_interpreter.cpp  libgxxjit_interpreter.hpp  memory_flow_controller_command.h  powerpc_spu_command_handler.h  powerpc_virtual_storage_model.h  spe_function_arena_data.hpp  spe_function_offload_hook.hpp  spu_treewalk_linter.hpp
middleware/: Makefile
recuse/: .gitignore  Cargo.toml  README.md
recuse/.cargo/: config.toml
recuse/src/: lib.rs  main.rs
recuse/src/client/web/: frequency_mod_oscillate.rs  mod.rs  wasm_interface_audio_parser.rs  wasm_raylib_app_instance.rs
recuse/src/server/: mod.rs
recuse/src/server/components/: dashboard_card_template.rs  dashboard_template_user.rs  markdown_editor_user.rs  mod.rs  usage_config_router.rs
recuse/src/shared/: distributed_user_data.rs  mod.rs
recuse/src/views/: arbitrary_chord_translation.rs  mod.rs
res/: ctrl.odin  head.odin  main.odin
src/: components.cpp  components.zig  damage_vfx.cpp  handling.cpp  imports.zig  jit.cpp  main.cpp  main.h  main.zig  pasnd_audio_service.cpp  pasnd_device_attache_resolver.cpp  pasnd_devisor_components_handling.cpp  ragui_hashtable_impl.cpp  ragui_model_view_ctld.cpp  ragui_user_command_handler.cpp  spu.cpp
src/handlers/: window_applications_handler.zig
