[package]
name = "clibby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clibby"
crate-type = ["cdylib"] # Dynamic libary
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin/mod.rs"

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
axum = "0.6.11"
cxx = "1.0.94"
dotenv = "0.15.0"
futures = { version = "0.3", default-features = false }
libc = "0.2.141"
libfuzzer-sys = "0.4.6"
serde = { version = "1.0.132", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cxx-build = "1.0.94"