[package]
name = "recuse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "frequency_mod_oscillate"
path = "./src/client/web/frequency_mod_oscillate.rs"

[[bin]]
name = "usage_config_router"
path = "./src/server/composer/usage_config_router.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.11"
futures = { version = "0.3", default-features = false }
httpc-test = "0.1.1"
leptos = { version = "0.2.5", features = ["stable"] }
serde = { version = "1.0.132", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = true}
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.1"

[dependencies.web-sys]
version = "0.3.5"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'Document',
  'Element',
  'HtmlElement',
  'GainNode',
  'Node',
  'OscillatorNode',
  'OscillatorType',
  'Window',
]
