[package]
name = "recuse-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.70"
axum = "0.6.11"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
cfg-if = "1.0.0"
futures = { version = "0.3", default-features = false }
gloo-net = { version = "0.2.5", features = ["http"] }
http = { version = "0.2.8", optional = true }
httpc-test = "0.1.1"
js-sys = "0.3.6"
leptos = { version = "0.3.0", features = ["stable"] }
leptos_router = "0.3.0"
leptos_meta = "0.3.0"
libc = "0.2.0"
# raylib = { path = "ext/raylib" }
regex = "1.8.3"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
simple_logger = "4.0.0"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4", features = ["fs"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = true}
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics",]}
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.1"

[dependencies.web-sys]
version = "0.3.5"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
